--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mocha": "1.13.0",
     "chai": "1.7.2",
     "grunt": "0.4.1",
+    "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-jshint": "0.6.4",
-    "grunt-mocha-test": "0.7.0"
+    "grunt-mocha-test": "0.7.0",
+    "requirejs": "~2.1.10",
+    "grunt-mocha-phantomjs": "~0.4.0"
   }
 }
